# hummingbird-k8s

./: .gitignore  .pre-commit-config.yaml  10-k8s-worker.preset  10-k8s.preset  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  Containerfile.hbird  Containerfile.k8s  Containerfile.k8s-worker  LICENSE  Makefile  NOTES.md  NOTICE  README.md  SECURITY.md  build-k8s.sh  build-worker.sh  build.sh  cluster.example.conf  config.example.sh  define-vm-k8s.sh  define-vm.sh  k8s-bootc-talk.transcript.txt  k8s-init.sh  kubectl-k8s.sh  redo-workers.sh  redo.sh  spawn-workers.sh  worker-init.service  worker-init.sh
.devcontainer/: Containerfile  README.md  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml  renovate.json
.github/agent-review-prompts/: backwards-compat.md  containerfile.md  correctness.md  defaults-ux.md  docs-accuracy.md  security.md  shell-hygiene.md  supply-chain.md  test-plan.md  workflow-yaml.md
.github/workflows/: agent-review.yml  build-images.yml  build-k3s.yml  build-k8s.yml  build-worker.yml  integration-boot-k3s.yml  integration-boot.yml  integration-bootc-rollback.yml  integration-bootc-upgrade.yml  integration-cloud-init.yml  integration-export-argocd.yml  integration-update-cluster.yml  integration-workers-join.yml  pr-validate.yml  release.yml  rust-ci.yml  verify-weekly.yml
containers/k3s/: 10-k3s.preset  Containerfile  ssh-hostkey-regen.service  ssh-hostkey-regen.sh
containers/k8s/: 10-k8s.preset  Containerfile  k8s-init.service  k8s-init.sh  verify-encryption-local.sh
containers/k8s-worker/: 10-k8s-worker.preset  Containerfile  worker-init.service  worker-init.sh
containers/shared/: bootc-semver-update.service  bootc-semver-update.sh  bootc-semver-update.timer  health-check-rollback.service  health-check-rollback.sh  health-check-rollback.timer
docs/: agent-review.md  app-deploy-verify.md  argocd.md  auto-updates.md  backup-restore.md  boot-test-overrides.md  cilium-migration.md  cloud-init.md  deploy-cluster.md  development.md  etcd-encryption.md  image-verification.md  integration-tests.md  k3s-ghcr-deprecation.md  k8s-version-upgrade.md  kube-bench.md  makefile.md  multi-arch.md  orchestrator.md  rollback.md  rust-cli-migration.md  rust-cli.md  security-hardening.md  self-hosted-runner.md  ssh-keys.md  troubleshooting.md  update-cluster.md  upstream-references.md  vm-sizing.md  worker-tokens.md
docs/cycles/: export-argocd-family-cycle1.md  phase4-bash-cycle1.md  verify-cycle1.md
etc/kubernetes/: admission-control-config.yaml  audit-policy.yaml
lib/: build-common.sh  cache-utils.sh
rust/: Cargo.toml  README.md  deny.toml  rust-toolchain.toml
rust/crates/hbird-cli/: Cargo.toml
rust/crates/hbird-cli/src/: cp_kubectl.rs  cp_resolve.rs  main.rs
rust/crates/hbird-cli/src/commands/: deploy_cluster.rs  destroy_cluster.rs  export_argocd.rs  get_kubeconfig.rs  kubectl.rs  mod.rs  nodes.rs  spawn_workers.rs  update_cluster.rs  verify.rs
rust/crates/hbird-cli/tests/: cli_smoke.rs  cp_kubectl_live.rs  cycle2_bootid_live.rs  cycle3_daemonset_live.rs  cycle4_apiserver_live.rs  cycle_export_argocd_live.rs  cycle_get_kubeconfig_live.rs  cycle_kubectl_live.rs  cycle_nodes_live.rs  phase4_dry_run.rs  update_cluster_dry_run.rs  update_cluster_lock_contention.rs  verify_app_deploy_live.rs  verify_encryption_live.rs  verify_hardening_live.rs
rust/crates/hbird-cli/tests/update_cluster/fixtures/: dry_run_continue_on_error.txt  dry_run_deploy.txt  dry_run_destroy.txt  dry_run_full_cluster.txt  dry_run_no_empty_dir.txt  dry_run_node_cp.txt  dry_run_node_worker.txt  dry_run_override.txt  dry_run_parallel2.txt  dry_run_skip_drain.txt  dry_run_skip_gates.txt  dry_run_spawn.txt  dry_run_start_from.txt  dry_run_workers_only.txt
rust/crates/hbird-cli/tests/update_cluster/fixtures/live/: README.md  cycle1_drain_uncordon.txt  cycle2_bootid.txt  cycle3_daemonset.txt  cycle4_apiserver.txt  cycle_export_argocd.txt  cycle_get_kubeconfig.txt  cycle_kubectl.txt  cycle_nodes.txt  cycle_verify_all.txt  cycle_verify_app_deploy.txt  cycle_verify_encryption.txt  cycle_verify_hardening.txt
rust/crates/hbird-common/: Cargo.toml
rust/crates/hbird-common/src/: lib.rs
rust/crates/hbird-config/: Cargo.toml
rust/crates/hbird-config/src/: error.rs  lib.rs  parser.rs
rust/crates/hbird-config/tests/: parse_example_conf.rs  strictness.rs
rust/crates/hbird-core/: Cargo.toml
rust/crates/hbird-core/src/: lib.rs
rust/crates/hbird-openssh/: Cargo.toml
rust/crates/hbird-openssh/src/: error.rs  lib.rs  options.rs
rust/crates/hbird-openssh/tests/: options_match_bash_twin.rs
rust/crates/hbird-ssh/: Cargo.toml
rust/crates/hbird-ssh/src/: error.rs  exec.rs  lib.rs  options.rs
rust/crates/hbird-ssh/tests/: options_pin_argv_shape.rs
rust/crates/hbird-virt/: Cargo.toml
rust/crates/hbird-virt/src/: error.rs  lib.rs  ssh.rs  uri.rs
rust/crates/hbird-virt/tests/: uri_parse.rs  virsh_commands.rs
scripts/: backup-etcd.sh  build-k3s.sh  build-k8s.sh  build-worker.sh  check-cilium-k8s-compat.sh  check-lints-inheritance.sh  clean-vms.sh  create-issues.sh  define-vm-k8s.sh  define-vm.sh  deploy-cluster.sh  destroy-cluster.sh  export-argocd.sh  kube-bench-baseline.txt  kubectl-k8s.sh  migrate-to-system.sh  redo-k3s.sh  redo-k8s.sh  redo-workers.sh  restore-etcd.sh  rotate-etcd-encryption-key.sh  run-kube-bench.sh  setup-runner.sh  spawn-workers.sh  switch-to-ghcr.sh  update-cluster.sh  verify-app-deploy.sh  verify-encryption.sh  verify-hardening.sh  verify-rust-lints-inheritance.sh
scripts/lib/: cloud-init-seed.sh  ssh-wrap.sh
tests/: integration-boot-k3s.sh  integration-boot.sh  integration-bootc-rollback.sh  integration-bootc-upgrade.sh  integration-cloud-init.sh  integration-export-argocd.sh  integration-update-cluster.sh  integration-workers-join.sh  makefile.bats
tests/containers/: containerfile-deps.bats  worker-init-no-cloud-init-wait.bats
tests/fixtures/: admin.conf  cloud-init-user-data.yaml  cluster.ci.conf
tests/lib/: build-common.bats  build_qcow2.bats  cache-utils.bats  preset_contract.bats
(+29 files in other folders)
