[package]
name = "hbird-cli"
version = "0.0.1"
description = "hummingbird-k8s operator CLI — `hbird` binary. Mirrors the operator-facing Makefile targets (deploy-cluster, destroy-cluster, update-cluster, verify-*, get-kubeconfig, export-argocd, nodes, kubectl) as clap subcommands."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

# Bash twin: top-level `Makefile` operator-facing targets — `deploy-cluster`,
# `destroy-cluster`, `update-cluster`, `verify-encryption`, `verify-hardening`,
# `verify-app-deploy`, `verify-all`, `get-kubeconfig`, `export-argocd`,
# `nodes`, `kubectl` — each delegating to a `scripts/*.sh` twin.
#
# This crate is the BINARY entry point for the Rust rewrite. It defines the
# clap-derive command tree so the operator-facing surface is locked in before
# any subcommand body lands. Real implementations follow in #286 (update),
# #287 (verify-*), #288 (kubeconfig + export-argocd), and #289 (deploy / destroy /
# spawn). For now every subcommand returns
# `Err(anyhow!("not yet implemented — tracked by #XXX"))`.
#
# Binary name is `hbird` (short, operator-typeable, matches the crate prefix).
# (#283, epic #279.)

[[bin]]
name = "hbird"
path = "src/main.rs"

[dependencies]
# clap-derive is the de-facto Rust standard for nested subcommand trees
# (structopt is legacy / merged into clap; argh has weaker subcommand
# ergonomics). `derive` gates the `#[derive(Parser)]` proc macros;
# `wrap_help` reflows long help to the terminal width which matters when
# the help text mirrors a multi-line bash help block. `cargo` enables
# the `cargo`-style help formatting used by the rest of the Rust
# ecosystem operators are likely already familiar with.
clap = { version = "4", features = ["derive", "wrap_help", "cargo", "env"] }

# Binary uses `anyhow` for top-level error handling — the convention in
# the Rust ecosystem (and reaffirmed by the epic's
# "library = thiserror, binary = anyhow" split). Library crates in the
# workspace still use `thiserror` for typed errors; this binary collapses
# them all into `anyhow::Error` at the dispatch boundary so the eventual
# `main() -> Result<()>` shape stays one line per subcommand.
anyhow = "1"

# Foundation crates the update-cluster body builds on. `hbird-config`
# parses `cluster.local.conf`; the SSH transport + libvirt wrapper land
# as the live-execution slice follows (deferred per #286 module docs;
# tracked by #322).
# Path deps stay path-only — no version bumps until release engineering
# (#290) wires cargo-dist.
hbird-config = { path = "../hbird-config", version = "0.0.1" }

# Phase 1B (#322): SSH transport used by `cp_kubectl` to wire the live
# execution path. The shim takes a `Plan` (carries cp_ip + kvm_host)
# and constructs a `Client` per call — connection caching is left to
# `with_controlmaster` for now (no async runtime required). Bash twin's
# `cp_kubectl` (scripts/update-cluster.sh:425) is the operator-mental-model
# contract this wraps.
hbird-ssh = { path = "../hbird-ssh", version = "0.0.1" }

# Signal handling for the SIGINT/SIGTERM lock-release path (round-2
# review of #321, lens L3#1). `LockGuard::Drop` doesn't fire when the
# process is killed by a signal we don't trap, so `acquire_lock`
# installs a handler that releases the kernel-held flock before
# re-raising. `signal-hook` is the de-facto async-signal-safe crate
# on stable Rust (used by tokio/tracing); the workspace lint
# `unsafe_code = "forbid"` rules out raw `sigaction(2)` bindings.
signal-hook = "0.3"

# Structured logging. `tracing` is the de-facto standard in the Rust
# ecosystem (async-aware spans, structured fields, level-based filtering)
# and is what the workspace standardizes on for instrumentation across
# `hbird-cli`, `hbird-ssh`, and `hbird-virt`. Adding it here at the
# binary layer initializes a subscriber so spans / events from the
# library crates have somewhere to land. (#323; the foundation crates'
# `#[tracing::instrument]` attrs are no-ops without an initialized
# subscriber in the binary.)
tracing = "0.1"

# Subscriber that turns `tracing` events into terminal output.
# - `env-filter` lets operators tune log volume via `RUST_LOG`
#   (the de-facto-standard env var; `RUST_LOG=hbird_ssh=debug` to
#   surface per-host SSH spans, `RUST_LOG=info` is the default).
# - `fmt` is the human-readable terminal formatter. We pin the
#   formatter to stderr + no-timestamp + no-target + no-ansi so the
#   output stays close to the bash twin's `[update-cluster] …`
#   prefix lines (which the `update-cluster` body still emits via
#   `println!`/`eprintln!` to stdout/stderr — the dry-run fixtures
#   committed in PR #321 pin those byte-for-byte and must keep
#   matching). The binary owns subscriber init; library crates only
#   depend on `tracing` itself.
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
# Integration tests (`tests/cli_smoke.rs`) parse the command tree without
# running it — no extra deps beyond clap's built-in test surface needed.

[lints]
workspace = true
