[package]
name = "hbird-config"
version = "0.0.1"
description = "Parser for hummingbird-k8s cluster.local.conf (bash-sourced KEY=value / KEY=(array) format)."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

# Bash twin: scripts/deploy-cluster.sh + the historical
# scripts/update-cluster.sh (removed in v0.1.0 cutover #353; Rust twin
# `hbird update-cluster` is canonical) `source` the config file and read
# shell variables. This crate parses the SAME file as static text — no
# shell evaluation — so the operator can keep editing cluster.local.conf
# with the documented `KEY=value` and `KEY=(array)` shapes while Rust
# subcommands consume a typed `ClusterConfig`. (#282, epic #279.)

[dependencies]
thiserror = "2"

[dev-dependencies]
# Integration tests reach back to the repo root for cluster.example.conf.

[lints]
workspace = true
